# midi-c

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh
midi/: midi.c  midi.h
test/: test_midi.c
